tests/negative/typecheck/addrof.orng
// addrof.orng:5:20: error: expected a value of type `Int`
// fn main() -> Int {&Int}
//                   ^
// 
fn main() -> Int {&Int}